--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<h1>MaBirds</h1>
-<div id="hand-top" class="row"></div>
-<div id="hand-bottom" class="row"></div>
-<div id="hand-left" class=""></div>
-<div id="hand-right" class=""></div>
-<!-- <div class="container"></div> -->
 <script src="script.js"></script>
+
+<h3>MaBirds</h3>
+<div id="pos-top" class="row"></div>
+<div id="pos-bottom" class="row"></div>
+<div id="pos-left" class=""></div>
+<div id="pos-right" class=""></div>
+<!-- <div class="container"></div> -->
