add pool 5-rows

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,4 +9,11 @@
 <div id="pos-bottom" class="row"></div>
 <div id="pos-left" class=""></div>
 <div id="pos-right" class=""></div>
+<div id="pool" class="">
+    <div id="pool-row-0" class="row pool-row-even"></div>
+    <div id="pool-row-1" class="row pool-row-odd"></div>
+    <div id="pool-row-2" class="row pool-row-even"></div>
+    <div id="pool-row-3" class="row pool-row-odd"></div>
+    <div id="pool-row-4" class="row pool-row-even"></div>
+</div>
 <!-- <div class="container"></div> -->
