--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,18 @@
 <div id="pos-bottom" class="row"></div>
 <div id="pos-left" class=""></div>
 <div id="pos-right" class=""></div>
-<div id="pool" class="">
+<div id="pool-box" class="">
     <div id="pool-row-0" class="row pool-row-even"></div>
     <div id="pool-row-1" class="row pool-row-odd"></div>
     <div id="pool-row-2" class="row pool-row-even"></div>
     <div id="pool-row-3" class="row pool-row-odd"></div>
     <div id="pool-row-4" class="row pool-row-even"></div>
+</div>
+<div id="action-box" class="row">
+    <button id="action-play" class="btn action">打</button>
+    <button id="action-pong" class="btn action">碰</button>
+    <button id="action-song" class="btn action">上</button>
+    <button id="action-gong" class="btn action">槓</button>
+    <button id="action-wooo" class="btn action">胡</button>
 </div>
 <!-- <div class="container"></div> -->
