--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="script.js"></script>
 
-<h3>MaBirds</h3>
+<div id="name-tag">#jasonisgod</div>
 <div id="pos-top" class="row"></div>
 <div id="pos-bottom" class="row"></div>
 <div id="pos-left" class=""></div>
