--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,17 +10,23 @@
 <div id="pos-left" class=""></div>
 <div id="pos-right" class=""></div>
 <div id="pool-box" class="">
-    <div id="pool-row-0" class="row pool-row-even"></div>
-    <div id="pool-row-1" class="row pool-row-odd"></div>
-    <div id="pool-row-2" class="row pool-row-even"></div>
-    <div id="pool-row-3" class="row pool-row-odd"></div>
-    <div id="pool-row-4" class="row pool-row-even"></div>
+    <div id="pool-row-0" class="row pool-row pool-row-even"></div>
+    <div id="pool-row-1" class="row pool-row pool-row-odd"></div>
+    <div id="pool-row-2" class="row pool-row pool-row-even"></div>
+    <div id="pool-row-3" class="row pool-row pool-row-odd"></div>
+    <div id="pool-row-4" class="row pool-row pool-row-even"></div>
 </div>
 <div id="action-box" class="row">
-    <button id="action-play" class="btn action">打</button>
-    <button id="action-pong" class="btn action">碰</button>
-    <button id="action-song" class="btn action">上</button>
-    <button id="action-gong" class="btn action">槓</button>
-    <button id="action-wooo" class="btn action">胡</button>
+    <button id="action-play" class="btn action" onclick="onclickAction('play')">打</button>
+    <button id="action-pong" class="btn action" onclick="onclickAction('pong')">碰</button>
+    <button id="action-song" class="btn action" onclick="onclickAction('song')">上</button>
+    <button id="action-gong" class="btn action" onclick="onclickAction('gong')">槓</button>
+    <button id="action-wooo" class="btn action" onclick="onclickAction('wooo')">胡</button>
+    <button id="action-cancel" class="btn action" onclick="onclickAction('cancel')">取消</button>
+    <button id="action-bot" class="btn action" onclick="onclickAction('bot')">電腦</button>
+</div>
+<div id="menu-box" class="row">
+    <button id="action-start" class="btn action" onclick="onclickAction('start')">新局</button>
+    <button id="action-random" class="btn action" onclick="onclickAction('random')">隨機</button>
 </div>
 <!-- <div class="container"></div> -->
