--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,16 +17,16 @@
     <div id="pool-row-4" class="row pool-row pool-row-even"></div>
 </div>
 <div id="action-box" class="row">
-    <button id="action-play" class="btn action" onclick="onclickAction('play')">打</button>
-    <button id="action-pong" class="btn action" onclick="onclickAction('pong')">碰</button>
-    <button id="action-song" class="btn action" onclick="onclickAction('song')">上</button>
-    <button id="action-gong" class="btn action" onclick="onclickAction('gong')">槓</button>
-    <button id="action-wooo" class="btn action" onclick="onclickAction('wooo')">胡</button>
-    <button id="action-cancel" class="btn action" onclick="onclickAction('cancel')">取消</button>
-    <button id="action-bot" class="btn action" onclick="onclickAction('bot')">電腦</button>
+    <button id="action-play" class="btn action" onclick="onclickAction('PLAY')">打</button>
+    <button id="action-pong" class="btn action" onclick="onclickAction('PONG')">碰</button>
+    <button id="action-song" class="btn action" onclick="onclickAction('SONG')">上</button>
+    <button id="action-gong" class="btn action" onclick="onclickAction('GONG')">槓</button>
+    <button id="action-wooo" class="btn action" onclick="onclickAction('WOOO')">糊</button>
+    <button id="action-cancel" class="btn action" onclick="onclickAction('CANCEL')">過</button>
+    <button id="action-bot" class="btn action" onclick="onclickAction('BOT')">電腦</button>
 </div>
-<div id="menu-box" class="row">
-    <button id="action-start" class="btn action" onclick="onclickAction('start')">新局</button>
-    <button id="action-random" class="btn action" onclick="onclickAction('random')">隨機</button>
+<div id="menu-box" class="">
+    <button id="action-start" class="btn action" onclick="onclickAction('START')">新局</button>
+    <button id="action-random" class="btn action" onclick="onclickAction('RANDOM')">隨機</button>
 </div>
 <!-- <div class="container"></div> -->
