action:pong,song,gong

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,10 @@
     <div id="pool-row-3" class="row pool-row pool-row-odd"></div>
     <div id="pool-row-4" class="row pool-row pool-row-even"></div>
 </div>
+<div id="label-top" class="label"></div>
+<div id="label-bottom" class="label"></div>
+<div id="label-left" class="label"></div>
+<div id="label-right" class="label"></div>
 <div id="action-box" class="row">
     <button id="action-play" class="btn action" onclick="onclickAction('PLAY')">打</button>
     <button id="action-pong" class="btn action" onclick="onclickAction('PONG')">碰</button>
@@ -23,7 +27,7 @@
     <button id="action-gong" class="btn action" onclick="onclickAction('GONG')">槓</button>
     <button id="action-wooo" class="btn action" onclick="onclickAction('WOOO')">糊</button>
     <button id="action-cancel" class="btn action" onclick="onclickAction('CANCEL')">過</button>
-    <button id="action-bot" class="btn action" onclick="onclickAction('BOT')">電腦</button>
+    <!-- <button id="action-bot" class="btn action" onclick="onclickAction('BOT')">電腦</button> -->
 </div>
 <div id="menu-box" class="">
     <button id="action-start" class="btn action" onclick="onclickAction('START')">新局</button>
