--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,8 +39,24 @@
 </div>
 
 <div id="menu-box" class="">
-    <button id="action-start" class="btn action" onclick="onclickAction('START')">新局</button>
-    <button id="action-random" class="btn action" onclick="onclickAction('RANDOM')">隨機</button>
+    <button id="action-start" class="btn action" onclick="onclickAction('START')">新局</button> <br>
+    <button id="action-random" class="btn action" onclick="onclickAction('RANDOM')">隨機</button> <br>
+</div>
+<div id="setting-box" class="">
+    <span>玩家:</span> <br>
+    <select id="select-seat" class="btn action">
+        <option value="0">東</option>
+        <option value="1">南</option>
+        <option value="2">西</option>
+        <option value="3">北</option>
+    </select> <br>
+    <span>電腦:</span> <br>
+    <select id="select-bots" class="btn action">
+        <option value="1,2,3,">南西北</option>
+        <option value="1,3,">南北</option>
+        <option value="1,">北</option>
+        <option value=",">無</option>
+    </select> <br>
 </div>
 
 <script>
