--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,7 @@
     <select id="select-bots" class="btn action">
         <option value="1,2,3,">南西北</option>
         <option value="1,3,">南北</option>
-        <option value="1,">北</option>
+        <option value="1,">南</option>
         <option value=",">無</option>
     </select> <br>
 </div>
