frontend select skin number 2,3

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,12 @@
     <button id="action-random" class="btn action" onclick="onclickAction('RANDOM')">隨機</button> <br>
 </div>
 <div id="setting-box" class="">
+    <span>材質:</span> <br>
+    <select id="select-skin" class="btn action">
+        <!-- <option value="1">1</option> -->
+        <option value="2">2</option>
+        <option value="3">3</option>
+    </select> <br>
     <span>玩家:</span> <br>
     <select id="select-seat" class="btn action">
         <option value="0">東</option>
