rotate msg if portrait

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="script.js"></script>
 
+<div id="rotate-box">
+    Please rotate your phone.
+    <img src="img/rotate.png" width="100%">
+</div>
+
+<div id="container">
+
 <div id="tag-box">
     <span id="ver-display"></span> 
     <br>
@@ -63,6 +70,8 @@
         <option value="1,">南</option>
         <option value=",">無</option>
     </select> <br>
+</div>
+
 </div>
 
 <script>
