pre-load images

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="script.js"></script>
 
+<div id="preload-box" style="display: none;"></div>
+
 <div id="rotate-box">
     <img src="img/rotate.png" width="100%">
 </div>
