pos-bottom goes up little

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,6 @@
         <div id="label-bottom" class="label"></div>
         <div id="label-left" class="label"></div>
         <div id="label-right" class="label"></div>
-        
         <div id="action-box" class="row">
             <button id="action-cancel" class="btn action" onclick="onclickAction('CANCEL')">過</button>
             <button id="action-gong" class="btn action" onclick="onclickAction('GONG')">槓</button>
@@ -49,10 +48,12 @@
             <button id="action-play" class="btn action" onclick="onclickAction('PLAY')">打</button>
             <!-- <button id="action-bot" class="btn action" onclick="onclickAction('BOT')">電腦</button> -->
         </div>
-        
         <div id="menu-box" class="">
             <button id="action-start" class="btn action" onclick="onclickAction('START')">新局</button> <br>
             <button id="action-random" class="btn action" onclick="onclickAction('RANDOM')">隨機</button> <br>
+        </div>
+        <div id="control-box" class="">
+            <button id="action-fullscreen" class="btn action" onclick="onclickFullscreen()">全屏</button> <br>
         </div>
         <div id="setting-box" class="">
             <span>材質:</span> <br>
