--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,31 +49,41 @@
             <!-- <button id="action-bot" class="btn action" onclick="onclickAction('BOT')">電腦</button> -->
         </div>
         <div id="menu-box" class="">
-            <button id="action-start" class="btn action" onclick="onclickAction('START')">新局</button> <br>
-            <button id="action-random" class="btn action" onclick="onclickAction('RANDOM')">隨機</button> <br>
+            <button id="action-start" class="btn action action-s" onclick="onclickAction('START')">新局</button> <br>
+            <button id="action-random" class="btn action action-s" onclick="onclickAction('RANDOM')">隨機</button> <br>
         </div>
         <div id="control-box" class="">
-            <button id="action-fullscreen" class="btn action" onclick="onclickFullscreen()">全屏</button> <br>
+            <button id="action-fullscreen" class="btn action action-s" onclick="onclickFullscreen()">全屏</button> <br>
         </div>
         <div id="setting-box" class="">
+            <span>畫面:</span> <br>
+            <select id="select-trans" class="btn action action-s">
+                <option value="+10vh">+10</option>
+                <option value="+5vh">+5</option>
+                <option value="+2vh">+2</option>
+                <option value="0vh" selected>正常</option>
+                <option value="-2vh">-2</option>
+                <option value="-5vh">-5</option>
+                <option value="-10vh">-10</option>
+            </select> <br>
             <span>材質:</span> <br>
-            <select id="select-skin" class="btn action">
+            <select id="select-skin" class="btn action action-s">
                 <!-- <option value="1">1</option> -->
-                <option value="2">2</option>
-                <option value="3">3</option>
+                <option value="2">默認</option>
+                <option value="3">麥塊</option>
             </select> <br>
             <span>玩家:</span> <br>
-            <select id="select-seat" class="btn action">
-                <option value="0">東</option>
-                <option value="1">南</option>
-                <option value="2">西</option>
-                <option value="3">北</option>
+            <select id="select-seat" class="btn action action-s">
+                <option value="0">東位</option>
+                <option value="1">南位</option>
+                <option value="2">西位</option>
+                <option value="3">北位</option>
             </select> <br>
             <span>電腦:</span> <br>
-            <select id="select-bots" class="btn action">
-                <option value="1,2,3,">南西北</option>
-                <option value="1,3,">南北</option>
-                <option value="1,">南</option>
+            <select id="select-bots" class="btn action action-s">
+                <option value="1,2,3,">三家(南西北)</option>
+                <option value="1,3,">兩家(南北)</option>
+                <option value="1,">一家(南)</option>
                 <option value=",">無</option>
             </select> <br>
         </div>
