--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="script.js"></script>
+<script src="domain.js"></script>
 
 <div id="preload-box" style="display: none;"></div>
 
