add kelb texture

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,7 @@
                 <!-- <option value="1">1</option> -->
                 <option value="2">默認</option>
                 <option value="3">麥塊</option>
+                <option value="4">kelb</option>
             </select> <br>
             <span>玩家:</span> <br>
             <select id="select-seat" class="btn action action-s">
