--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="script.js"></script>
 <script src="domain.js"></script>
+<script src="version.js"></script>
+<script src="script.js"></script>
 
 <div id="preload-box" style="display: none;"></div>
 
@@ -76,6 +77,7 @@
             <!-- <option value="1">1</option> -->
             <option value="2">默認</option>
             <option value="3">麥塊</option>
+            <option value="4">麻勾</option>
         </select> <br>
         <span class="btn-label">玩家</span>
         <select id="select-seat" class="btn btn-center action action-s">
@@ -90,6 +92,7 @@
             <option value="1,3,">兩家(南北)</option>
             <option value="1,">一家(南)</option>
             <option value=",">無</option>
+            <option value="0,1,2,3,">全部</option>
         </select> <br>
         <br>
         <button id="action-continue" class="btn action action-s" onclick="toggleMenu()">繼續</button> <br>
