add play audio mp3

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
 <script src="version.js"></script>
 <script src="script.js"></script>
 
+<audio id="audio-mp3" src="audio/mahjong-1-s.mp3" controls preload style="display: none;"></audio>
+
 <div id="preload-box" style="display: none;"></div>
 
 <div id="rotate-box">
@@ -77,7 +79,7 @@
             <!-- <option value="1">1</option> -->
             <option value="2">默認</option>
             <option value="3">麥塊</option>
-            <option value="4">麻勾</option>
+            <option value="4" selected>麻勾</option>
         </select> <br>
         <span class="btn-label">玩家</span>
         <select id="select-seat" class="btn btn-center action action-s">
