split audio mp3

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,11 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="domain.js"></script>
-<script src="version.js"></script>
-<script src="script.js"></script>
+<script src="domain.js?891275492"></script>
+<script src="version.js?1928634"></script>
+<script src="script.js?12344635"></script>
 
-<audio id="audio-mp3" src="audio/mahjong-1-s.mp3" controls preload style="display: none;"></audio>
+<audio id="audio-mp3" src="" controls preload style="display: none;"></audio>
 
 <div id="preload-box" style="display: none;"></div>
 
