--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css?1273643">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="domain.js?891275492"></script>
 <script src="version.js?1928634"></script>
@@ -25,6 +25,7 @@
         </div>
         <div id="tag-box">
             <span id="ver-display"></span>
+            <br>
             <span id="name-display">#jasonisgod</span>
         </div>
 
@@ -85,6 +86,11 @@
             <option value="3">北位</option>
         </select> <br>
         <span class="btn-label">電腦</span>
+        <!-- <input type="checkbox"> <span class="btn-label">東</span> </input> -->
+        <!-- <input type="checkbox"> <span class="btn-label">南</span> </input> -->
+        <!-- <input type="checkbox"> <span class="btn-label">西</span> </input> -->
+        <!-- <input type="checkbox"> <span class="btn-label">北</span> </input> -->
+        <!-- <br> -->
         <select id="select-bots" class="btn btn-center action action-s">
             <option value="1,2,3,">三家(南西北)</option>
             <option value="1,3,">兩家(南北)</option>
