--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,10 +58,16 @@
     </div>
     <div id="menu-box">
         <button id="action-start" class="btn action action-s" onclick="onclickAction('START')">新局</button> <br>
-        <button id="action-random" class="btn action action-s" onclick="onclickAction('RANDOM')">隨機</button> <br>
-        <button id="action-fullscreen" class="btn action action-s" onclick="onclickFullscreen()">全屏</button> <br>
         <br>
+        <!-- <button id="action-random" class="btn action action-s" onclick="onclickAction('RANDOM')">隨機</button> <br> -->
+        <!-- <span class="btn-label">全屏</span>
+        <button id="action-fullscreen" class="btn action action-s" onclick="onclickFullscreen()">全屏</button> <br> -->
         <span class="btn-label">畫面</span>
+        <select id="select-screen" class="btn btn-center action action-s">
+            <option value="0" selected>全屏</option>
+            <option value="1">視窗</option>
+        </select> <br>
+        <span class="btn-label">調整</span>
         <select id="select-trans" class="btn btn-center action action-s">
             <option value="+10vh">+10</option>
             <option value="+5vh">+5</option>
@@ -78,28 +84,28 @@
             <option value="3">麥塊</option>
             <option value="4" selected>麻勾</option>
         </select> <br>
-        <span class="btn-label">玩家</span>
+        <!-- <span class="btn-label">玩家</span>
         <select id="select-seat" class="btn btn-center action action-s">
             <option value="0">東位</option>
             <option value="1">南位</option>
             <option value="2">西位</option>
             <option value="3">北位</option>
         </select> <br>
-        <span class="btn-label">電腦</span>
+        <span class="btn-label">電腦</span> -->
         <!-- <input type="checkbox"> <span class="btn-label">東</span> </input> -->
         <!-- <input type="checkbox"> <span class="btn-label">南</span> </input> -->
         <!-- <input type="checkbox"> <span class="btn-label">西</span> </input> -->
         <!-- <input type="checkbox"> <span class="btn-label">北</span> </input> -->
         <!-- <br> -->
-        <select id="select-bots" class="btn btn-center action action-s">
+        <!-- <select id="select-bots" class="btn btn-center action action-s">
             <option value="1,2,3,">三家(南西北)</option>
             <option value="1,3,">兩家(南北)</option>
             <option value="1,">一家(南)</option>
             <option value=",">無</option>
             <option value="0,1,2,3,">全部</option>
-        </select> <br>
+        </select> <br> -->
         <br>
-        <button id="action-continue" class="btn action action-s" onclick="toggleMenu()">繼續</button> <br>
+        <!-- <button id="action-continue" class="btn action action-s" onclick="toggleMenu()">繼續</button> <br> -->
     </div>
     <div id="menu-mask" onclick="toggleMenu()"></div>
 </div>
